PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_11-125_if_else_condition_invalide_2/gcc-compile.txt
input.c:3:13: error: expected expression
    if (a = ) {
            ^
1 error generated.

return code: 1
